[package]
name = "tokimak"
version = "0.0.0"
edition = "2021"
authors = ["Pierce Bartine (pbar)"]
license = "MIT"
repository = "https://github.com/pbar1/tokimak"
description = "Tokio task reactor"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
async-trait = "0.1.83"
clap = { version = "4", features = ["derive", "env"] }
console-subscriber = "0.4"
indicatif = "0.17"
rand = "0"
russh = "0.45"
russh-keys = "0.45.0"
tracing-glog = "0.4"
tracing-indicatif = "0.3"
tracing-subscriber = "0.3"
